Removed compiler args with reference to JavaFX local libraries